[package]
name = "lily_rust"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "libs/compiler",
    "libs/lexer",
    "libs/parser",
]

[dependencies]
dbg-pls = {version = "0.3.4", features = ["colors", "derive", "pretty"]}

compiler = {path = "libs/compiler"}
lexer = {path = "libs/lexer"}
parser = {path = "libs/parser"}
