[package]
name = "lily_rust"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "libs/lexer",
    "libs/parser",
    "libs/vreggy",
]

[dependencies]
dbg-pls = {version = "0.3.4", features = ["colors", "derive", "pretty"]}

lexer = {path = "libs/lexer"}
parser = {path = "libs/parser"}
vreggy = {path = "libs/vreggy"}
